--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,4 +59,4 @@ deploy:
   script:
     - docker-compose -f docker-compose.deploy.yml pull
     - docker-compose -f docker-compose.deploy.yml down --remove-orphans
-    - docker-compose -f docker-compose.deploy.yml up -d.env
+    - docker-compose -f docker-compose.deploy.yml up -d
