--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,5 +57,6 @@ deploy:
   stage: deploy
   when: manual
   script:
+    - docker-compose -f docker-compose.deploy.yml pull
     - docker-compose -f docker-compose.deploy.yml down --remove-orphans
     - docker-compose -f docker-compose.deploy.yml up -d
